# here-qgis-python

./: .coveragerc  .editorconfig  .flake8  .gitignore  .here_qgis.bumpversion.cfg  .here_qgis_plugin.bumpversion.cfg  .mac.env  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  AUTHORS.rst  CONTRIBUTING.rst  HERE_NOTICE  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_h.txt  setup.cfg  towncrier.toml
here_qgis_plugin/: __init__.py  api_factory.py  config.py  here_qgis_plugin.py  here_qgis_provider.py  metadata.txt  plugin_without_dependencies.py  settings.py
here_qgis_plugin/flatten/: flatten_qgs.py  geojson_to_qgis.py  qgis_to_geojson.py  unflatten_qgs.py
here_qgis_plugin/mapping_preset/: FilterPreset_MapMaking.json  Preset_MapMaking.json
here_qgis_plugin/mapping_preset/topology/: Preset_AccessChar.json  Preset_ConditionalAttribute.json  Preset_RoadName.json  Preset_Speed.json  Preset_TopologyChar.json
here_qgis_plugin/mom/: __init__.py  osm_to_imom.py  osm_to_mom_10.py
here_qgis_plugin/processing_toolbox/: __init__.py  align_v1_to_v2.py  backward_compatibilty.py  basemap_processing_toolbox.py  clear_tmp_dir_processing_toolbox.py  file_type.py  geocode_processing_toolbox.py  get_and_load.py  get_features.py  here_processing_base.py  iml_apply_style.py  iml_apply_style_to_many_layers.py  iml_batch_load_model.py  iml_flatten_on_the_fly.py  iml_flatten_to_csv.py  iml_load_and_flatten.py  iml_load_density.py  iml_load_layer.py  iml_one_click_apply_style.py  iml_reload_all_visible_layers.py  iml_reload_layer.py  iml_reload_many_layers.py  iml_unflatten_csv.py  iml_unflatten_on_the_fly.py  iml_upload.py  layer_metadata.py  load_osm.py  mapmaking_upload.py  mom_syntax_checker_purge.py  mom_syntax_toolbox.py  ondemand_process_toolbox.py  prepare_unflatten_processing.py  processing_utils.py  query.py  refresh_token.py  reload_layer_helpers.py  routing_processing_toolbox.py  settings.py  uri_constructor.py  vml_batch.py  (+3 more)
here_qgis_plugin/style_set/: __init__.py  style_config.py
here_qgis_plugin/style_set/style_set_24_01_30/: loadStyleSets.py  release_notes.txt  transformJsonMomForStyleSetUseage.py
here_qgis_plugin/ui/: __init__.py  icons.py  resources.py  resources.qrc
here_qgis_plugin/ui/here_iml/: error_msg.py  message_bar.py  signal.py  toolbars.py
here_qgis_plugin/ui/here_qgis_processing/: basemap_processing.py  flatten_on_fly_processing.py  iml_layer_processing.py  refresh_token_processing.py  reload_layer_processing.py  unflatten_on_fly_processing.py  upload_mapmaking_processing.py
here_qgis_plugin/ui/icons/: readme.md
here_qgis_plugin/ui/utils/: read_bookmarks.py  required_plugin.py  settings_manager.py
here_qgis_plugin/utils/: clear_tmp.py  cmd_exec.py  dependencies.py  files.py  logging.py  print_version.py  wheel.py
src/here_qgis/: __init__.py  helper_functions.py
src/here_qgis/amplitude_events/: amplitude_client.py  amplitude_config.py  api_event.py  api_usage_event.py  install_event.py  mapmaking_event.py  qgis_base_event.py
src/here_qgis/api/: api.py  basemap.py  geocoding.py  here_utils.py  map.py  mapmaking.py  mapprojects.py  routing.py  vml.py
src/here_qgis/flatten/: flatten.py  new_flatten.py  new_unflatten.py  unflatten.py  unflatten_helpers.py
(+110 files in other folders)
