####### PROJECT #######


[project]
name = "here_qgis"
authors = [
    { name = "HERE Europe B.V.", email = "here_qgis_plugin_dev_team@here.com" }
]
maintainers = [
    { name = "Minh Nguyen" },
    { name = "Subroto Karmokar" },
    { name = "Mikolaj Garbula" },
]
description = "HERE QGIS Python Library"
keywords = [
    "here_qgis",
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dynamic = ["version", "readme", "dependencies"]

[project.urls]
Homepage = "https://github.com/heremaps/here-qgis-python"

####### BUILD #######

[build-system]
requires = [
    "setuptools>=77",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true


[tool.setuptools.dynamic]
version = {attr = "here_qgis.__version__"}
readme = {file = ["README.rst", "CHANGELOG.md"]}
dependencies = {file = ["requirements.txt"]}

#[tool.setuptools.dynamic.optional-dependencies]
#default = {file = ["requirements_legacy.txt"]}
#312 = {file = ["requirements_latest.txt"]}

####### TEST #######


####### LINTER #######

[tool.black]
line-length = 88
target-version = ['py39']
preview = true

[tool.isort]
profile = "black"

####### STATIC CHECKING #######

[tool.mypy]
python_version = 3.8
mypy_path = "typings"
packages = [
    "here_qgis",
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pyright]
#include = [ "here_qgis" ]
# stubPath = "typings"
defineConstant = { DEBUG = true }
pythonPlatform = "All"
reportMissingImports = true
# reportMissingTypeStubs = true
# useLibraryCodeForTypes = false
# verboseOutput = true

####### DEPS #######

[project.optional-dependencies]
# Define internal deps in optional-dependencies, will not be detected by ort-scan
here-vml = [
    "here-geotiles>=2.22.0",
]
mom-core-10 = [
    "mom_core==10.0.0",
    "mom_core_geojson==10.0.0",
]
mom-internal-8 = [
    "mom_internal_geojson==8.11.0",
]

[dependency-groups]
hatch = [
    "hatch>=1.15",
]
tox = [
    "tox>=4.25.0",
]
test = [
    "coverage>=7.6.1",
    "dictdiffer>=0.9.0",
    "flake8>=5.0.4",
    "flake8-html>=0.4.3",
    "parameterized>=0.9.0",
    "pytest>=8.3.5",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-runner>=6.0.1",
    "pytest-vcr>=1.0.2",
    "coverage-enable-subprocess==1.0",
    "pytest-xdist[psutil]~=3.5",
]
docs = [
    "jupyter-sphinx>=0.3.2",
    "myst-parser>=1.0.0",
    "nbsphinx>=0.9.8",
    "pygments==2.6.1",
    "sphinx>=2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-jsonschema>=1.15",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-blockdiag>=3.0.0",
    "towncrier>=24.8.0",
    "setuptools<81",
]
build = [
    "build[virtualenv]>=1.2.2.post1",
    "bumpversion>=0.6.0",
    "twine>=6.1.0",
]
